# needs-assessment-v2

./: .env.example  .env.test  .flaskenv  .gitignore  .gitpod.yml  .prettierignore  README.md  docker-compose.yml  jest.global-setup.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.mts
.github/workflows/: test.yml
backend/: app.py  consts.py  models.py  pyproject.toml  requirements.txt  routes.py  seed.py  utils.py  validation.py
backend/data/: questions.csv  response_options.json  test_seed.json
backend/logic/: manipulate_site_info.py
backend/serialize/: serialize.py
backend/tests/: conftest.py  test_api.py  test_assessments.py  test_pages.py  test_site_assessment.py
backend/utils/: export_data.py  import_data.py  jwt_utils.py  utils.py
prisma/: seed.js
src/app/: layout.tsx  page.tsx
src/app/about/: page.tsx
src/app/create-account/: page.tsx
src/app/dashboard/: page.tsx
src/app/initialize-org/: page.tsx
src/app/initialize-site/: page.tsx
src/app/login/: page.tsx
src/components/: AssessmentForm.tsx  FormattedResponse.tsx  Navbar.tsx  PageLayout.tsx  PageTitle.tsx  ShareableCard.tsx  ShareableCarousel.tsx  Sidebar.tsx  SidebarIcon.tsx  SitePageCard.tsx
src/components/__tests__/: FormattedResponse.test.tsx
src/components/questions/: DemoGridInput.tsx  DropdownInput.tsx  DropdownWithOtherInput.tsx  (+5 more)
src/hooks/: useAssessmentForm.tsx
src/lib/: progressStyles.ts
src/styles/: colors.tsx  statusColors.tsx
src/types/: models.ts  ui-models.ts
types/: global.d.ts  next-auth.d.ts
(+11 files in other folders)
