[tool.poetry]
name = "needs-assessment"
version = "0.1.0"
description = "Python backend for Distribute Aid Needs Assessment"
authors = ["Distribute Aid <support@distributeaid.org>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
flask = "^2.3"
flask-cors = "^6.0.0"
flask-migrate = "^4.1.0"
pyjwt = "^2.10.1"
pandas = "^2.2.3"
bcrypt = "^4.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']
